# barracuda

./: CMakeLists.txt  README.md
src/: interrupts.cpp  kernel.asm  kmain.cpp  signals.hpp  uefi_module.hpp
src/fsdrivers/: fat32.hpp
